@@ -550,6 +550,20 @@ test coroutine-6.4 {unsupported: multi-argument yield} -body {
 } -cleanup {
     rename corobody {}
 } -result {x {y z 2} \{p {\{q r 2} {} 0 {} ok {}}
+
+test coroutine-7.1 {yieldTo} -body {
+    coroutine c apply {{} {
+	yield
+	tcl::unsupported::yieldTo return -level 0 -code 1 quux
+	return quuy
+    }}
+    set res [list [catch c msg] $msg]
+    lappend res [catch c msg] $msg
+    lappend res [catch c msg] $msg
+} -cleanup {
+    unset res
+} -result [list 1 quux 0 quuy 1 {invalid command name "c"}]
+
 
 # cleanup
 unset lambda
