@@ -1,7 +1,9 @@
 2010-08-11  Miguel Sofer  <msofer@users.sf.net>
-	* generic/tclBasic.c (TclNRYieldToObjCmd): fixed bad copypasta
-	snafu. Thanks to Andy Goth for finding the bug.
 
+	* generic/tclBasic.c (TclNRYieldToObjCmd): 
+	* tests/coroutine.test: fixed bad copypasta snafu. 
+	Thanks to Andy Goth for finding the bug.
+	
 2010-08-10  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tclUtil.c (TclByteArrayMatch): patterns may not be
